refactor(app):重构应用管理功能- 移除 AppAdminUpdateRequest 中的 cover 和 priority 字段 - 新增 AppConstant 常量类定义应用优先级 - 优化用户更新应用逻辑，增加权限校验与-编辑时间设置 调整精选应用查询方式，使用常量过滤 - 修改管理员接口路径，统一以 /admin 开头 - 在 AppServiceImpl 中注入 UserService 并优化用户信息关联查询 - 为 AppVO 添加用户信息字段，支持批量查询优化 - 更新控制器注释和参数说明