@@ -10,15 +10,21 @@ import com.my.myaicodemother.mode.dto.AppQueryRequest;
 import com.my.myaicodemother.mode.entity.User;
 import com.my.myaicodemother.mode.enums.UserRoleEnum;
 import com.my.myaicodemother.mode.vo.AppVO;
+import com.my.myaicodemother.mode.vo.UserVO;
 import com.my.myaicodemother.service.AppService;
+import com.my.myaicodemother.service.UserService;
 import com.mybatisflex.core.query.QueryWrapper;
 import com.mybatisflex.spring.service.impl.ServiceImpl;
 import com.my.myaicodemother.mode.entity.App;
 import com.my.myaicodemother.mapper.AppMapper;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * 应用 服务层实现。
@@ -27,6 +33,9 @@ import java.util.List;
  */
 @Service
 public class AppServiceImpl extends ServiceImpl<AppMapper, App> implements AppService {
+
+    @Resource
+    private UserService userService;
 
     @Override
     public void validApp(App app, boolean add) {
@@ -83,6 +92,13 @@ public class AppServiceImpl extends ServiceImpl<AppMapper, App> implements AppSe
         }
         AppVO appVO = new AppVO();
         BeanUtil.copyProperties(app, appVO);
+        // 关联查询用户信息
+        Long userId = app.getUserId();
+        if (userId != null) {
+            User user = userService.getById(userId);
+            UserVO userVO = userService.getUserVO(user);
+            appVO.setUser(userVO);
+        }
         return appVO;
     }
 
@@ -91,10 +107,20 @@ public class AppServiceImpl extends ServiceImpl<AppMapper, App> implements AppSe
         if (CollUtil.isEmpty(appList)) {
             return new ArrayList<>();
         }
-        return appList.stream()
-                .map(this::getAppVO)
-                .toList();
+        // 批量获取用户信息，避免 N+1 查询问题
+        Set<Long> userIds = appList.stream()
+                .map(App::getUserId)
+                .collect(Collectors.toSet());
+        Map<Long, UserVO> userVOMap = userService.listByIds(userIds).stream()
+                .collect(Collectors.toMap(User::getId, userService::getUserVO));
+        return appList.stream().map(app -> {
+            AppVO appVO = getAppVO(app);
+            UserVO userVO = userVOMap.get(app.getUserId());
+            appVO.setUser(userVO);
+            return appVO;
+        }).collect(Collectors.toList());
     }
+
 
     @Override
     public void checkAppAuth(App app, User loginUser) {
